[project]
name = "rentwise"
version = "0.1.0"
description = "Module to get all real estate data in France"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
